# commplet

./: .gitignore  Procfile  README.md  create_icons.py  create_logo.py  database_config.py  investment_platform.db-shm  investment_platform.db-wal  main.py  profit_calculator.py  pyproject.toml  render.yaml  render_optimized.py  render_start.py  requirements.txt  sqlite_utils.py  start.sh
static/: manifest.json  offline.html  sw.js
static/icons/: .gitkeep
templates/: admin_activation.html  admin_dashboard.html  admin_info.html  admin_support.html  admin_support_ticket.html  admin_transactions.html  auto_trading.html  base.html  copy_trading.html  dashboard.html  frozen_plans.html  index.html  investment_history.html  login.html  profile.html  project_detail.html  projects.html  register.html  security.html  staking_plans.html  support.html  support_ticket.html  support_widget.html  ultra_plans.html
